--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,7 +38,7 @@ website:
 
     right:
     - icon: github
-      href: https://github.com/
+      href: https://github.com/HCC-R-Workshop/R-workshop-website
   # - text: Problem Sets
   #   href: PS.html
   #  - text: Mini-Projects
