--- a/_quarto.yml
+++ b/_quarto.yml
@@ -17,6 +17,9 @@ output:
     self_contained: no
     includes:
      in_header: "favicon.html"
+    link-external-newwindow: true
+
+
 # All icons were obtained from https://icons.getbootstrap.com/
 website:
   page-navigation: true
