Adding Day 2 and Day 3 Links

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -23,6 +23,11 @@ output:
 
 # All icons were obtained from https://icons.getbootstrap.com/
 website:
+#   comments:
+#     utterances:
+#       repo: quarto-dev/quarto-web
+#       theme: preferred-color-scheme
+
   page-navigation: true
   title: "Intro Stats with R"
 
